--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
             <div class="w-md-50 w-38 order-3"><img src="assets/img/img-4.png" class="img-fluid w-100" alt="img-4"></div>
         </div>
     </header>
+
+    <!-- PRUEBAS -->
+    <!-- <header>
+        <div class="row d-flex flex-wrap">
+            <div class="col-12 col-md-4 p-0 order-md-0 order-1"><img src="assets/img/img-1.png" class="img-fluid w-100" alt="img-1"></div>
+            <div class="col-12 col-md-8 p-0 order-md-1 order-0"><img src="assets/img/img-2.png" class="img-fluid w-100" alt="img-2"></div>
+        </div>
+        <div class="row d-flex flex-wrap">
+            <div class="col-12 col-md-6 p-0 order-md-2 order-0"><img src="assets/img/img-3.png" class="img-fluid w-100" alt="img-3"></div>
+            <div class="col-12 col-md-6 p-0 order-1"><img src="assets/img/img-4.png" class="img-fluid w-100" alt="img-4"></div>
+        </div>
+    </header> -->
     <!-- Fin cabecera -->
 
     <!-- Inicio section -->
